# Wiley

./: .gitignore  LICENSE.txt  Wiley.sln
Wiley/: CMakeLists.txt  EM.toml  Material Editor.jdon  Material Editor.json  Material.toml  NodeConfig.json  SponzaNew.mtl  Wiley.cpp  Wiley.vcxproj  Wiley.vcxproj.filters  framegraph.lua  imgui.ini
Wiley/Assets/Default Textures/: default_ambient_occlusion.dds  default_diffuse.dds  default_metallic.dds  default_normal.dds
Wiley/Assets/Environment Maps/: Neutral HDRI.hdr
Wiley/Assets/Models/Backpack/: imgui.ini
Wiley/Assets/Models/Boulder_01_2k/: Boulder.mtl  imgui.ini
Wiley/Assets/Models/Boulder_01_2k/textures/: imgui.ini
Wiley/Assets/Models/Gun/: gun.mtl  imgui.ini
Wiley/Assets/Models/Gun/Textures/: imgui.ini
Wiley/Assets/Models/Lion_Head_4k/: imgui.ini  lion_head_4k.mtl
Wiley/Assets/Models/Lion_Head_4k/textures/: imgui.ini
Wiley/Assets/Models/LivingSpaceSmall/: LivingSpace.mtl
Wiley/Assets/Models/Motor/: Motor.mtl
Wiley/Assets/Models/SunTemple/: SunTemple.mtl
Wiley/Assets/Models/cannon_01_4k/: cannon_01_4k.mtl
Wiley/Assets/Shaders/: brdf_lut.hlsl  cluster_assignment.hlsl  cluster_cull.hlsl  cluster_gen.hlsl  cluster_heatmap.hlsl  common.hlsl  compact_cluster.hlsl  compute.hlsl  debug.hlsl  depth.hlsl  depth_prepass.hlsl  equirec_to_cubemap.hlsl  hdri_convolute.hlsl  light_cull.hlsl  prefiltered_map.hlsl  present.hlsl  shader.hlsl  shadow_map.hlsl
Wiley/Assets/Shaders/Lighting/: common_lighting.hlsl  lighting.hlsl  skybox.hlsl
Wiley/Core/: Allocator.cpp  Allocator.h  Delegate.h  FileSpace.cpp  FileSpace.h  Input.cpp  Input.h  Log.cpp  Log.h  MathConstants.h  MathTypes.h  MemoryLeakDetector.h  ScriptEngine.cpp  ScriptEngine.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  TracyWrapper.h  UUID.cpp  UUID.h  Utils.h  Window.cpp  Window.h  defines.h
Wiley/DebugSaves/: 08_-_Default.toml.toml  DefaultMaterial.toml.toml  M_Arch_Inst.toml.toml  M_Arch_Inst_2.toml.toml  M_Arch_Inst_Red.toml.toml  M_Arch_Inst_Red_2.toml.toml  M_BottomTrim_Inst.toml.toml  M_BottomTrim_Inst_Black.toml.toml  M_BottomTrim_Inst_UTile4.toml.toml  M_Dome_2.toml.toml  M_Dome_Inst.toml.toml  M_FirePit_Inst.toml.toml  M_FirePit_Inst_Glow.toml.toml  M_FirePit_Inst_nofire.toml.toml  M_FloorTiles1_Inst.toml.toml  M_FloorTiles1_Inst_Blue.toml.toml  M_FloorTiles1_Inst_Inst2.toml.toml  M_FloorTiles2_Inst.toml.toml  M_FloorTiles2_Inst_Inst_Inst.toml.toml  M_FloorTiles2_Inst_REd.toml.toml  M_Pillar_Inst.toml.toml  M_Pillar_Inst_Colored.toml.toml  M_Railing_Inst.toml.toml  M_Rocks_Inst.001.toml.toml  M_Rocks_Inst.002.toml.toml  M_Rocks_Inst.toml.toml  M_Shield_Inst.toml.toml  M_Soul_Rocks2_Inst.001.toml.toml  M_Soul_Rocks2_Inst.002.toml.toml  M_Soul_Rocks2_Inst.003.toml.toml  M_Soul_Rocks2_Inst.004.toml.toml  M_Soul_Rocks2_Inst.005.toml.toml  M_Soul_Rocks2_Inst.006.toml.toml  M_Soul_Rocks2_Inst.007.toml.toml  M_Soul_Rocks2_Inst.008.toml.toml  M_Soul_Rocks2_Inst.009.toml.toml  M_Soul_Rocks2_Inst.010.toml.toml  M_Soul_Rocks2_Inst.011.toml.toml  M_Soul_Rocks2_Inst.012.toml.toml  M_Soul_Rocks2_Inst.toml.toml  (+38 more)
Wiley/Editor/: Editor.cpp  Editor.h
Wiley/Editor/ImGuiExtension/: Themes.cpp  Themes.h
Wiley/Editor/Panels/: Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  Panel.cpp  Panel.h  SceneProperties.cpp  SceneProperties.h  Viewport.cpp  Viewport.h
Wiley/Engine/: Engine.cpp  Engine.h
Wiley/RHI/: Buffer.cpp  Buffer.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  ComputePipeline.cpp  ComputePipeline.h  CubeMap.cpp  CubeMap.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Fence.cpp  Fence.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IndirectCommandBuffer.cpp  IndirectCommandBuffer.h  InputLayout.h  RenderContext.cpp  RenderContext.h  RootSignature.cpp  RootSignature.h  Sampler.cpp  Sampler.h  ShaderByteCode.cpp  ShaderByteCode.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  UploadBuffer.cpp  UploadBuffer.h
Wiley/Renderer/: DebugRenderer.cpp  DebugRenderer.h  FrameGraph.cpp  FrameGraph.h  RenderPasses.cpp  RenderScript.cpp  Renderer.cpp  Renderer.h  ShadowMapManager.cpp  ShadowMapManager.h
Wiley/Renderer/Passes/: ComputeSceneDrawPass.cpp  DepthPrePass.cpp  GeometryPass.cpp  LightCullPass.cpp  LightingPass.cpp  PipelineStates.cpp  SceneCopyPass.cpp  ShadowMap.cpp
Wiley/Resource/: EnvironmentMap.h  Geometry.cpp  Geometry.h  ImageTexture.h  Material.h  Resource.h  ResourceCache.cpp  ResourceCache.h  ResourceLoader.cpp  ResourceLoader.h
Wiley/Resource/Loaders/: EnvironmentMapLoader.cpp  ImageTextureLoader.cpp  MaterialLoader.cpp  MeshLoader.cpp  mtl_parser.cpp  mtl_parser.h
Wiley/Scene/: Camera.cpp  Camera.h  Component.h  Entity.h  Scene.cpp  Scene.h
Wiley/Scene/Systems/: ISystem.h  LightComponentSystem.cpp  LightComponentSystem.h  MeshFilterSystem.cpp  MeshFilterSystem.h  TransformSystem.cpp  TransformSystem.h
Wiley/VTune/WileyVtune/: WileyVtune.vtuneproj
Wiley/ext/Assimp/: assimp-vc145-mt.lib  defs.h
Wiley/ext/sol/: luac.c
